# cpp-garbage-collector

./: CMakeLists.txt  README.md
include/: GCObject.hpp  GCPointer.hpp  GarbageCollector.hpp  IMemoryManager.hpp  MemoryPool.hpp  ObjectFactory.hpp  WeakGCPointer.hpp
src/: GCObject.cpp  GarbageCollector.cpp  MemoryPool.cpp  main.cpp
